added autocomplete attribute to form-controls, changed index.html banner to gif, disabled index.js banner rotator

--- a/client/common/login.html
+++ b/client/common/login.html
@@ -63,6 +63,7 @@
                     id="username"
                     name="username"
                     placeholder="example@example.com"
+                    autocomplete="username"
                   />
                   <span
                     id="username_error"
@@ -81,6 +82,7 @@
                     name="pwd"
                     minlength="8"
                     placeholder="********"
+                    autocomplete="current-password"
                   />
                   <span
                     id="pwd_error"
