--- a/client/common/register.html
+++ b/client/common/register.html
@@ -65,6 +65,7 @@
                     id="email_address"
                     name="email_address"
                     placeholder="example@example.com"
+                    autocomplete="email"
                   />
                   <span
                     id="email_address_error"
@@ -84,6 +85,7 @@
                     id="email_address1"
                     name="email_address1"
                     placeholder="example@example.com"
+                    autocomplete="email"
                   />
                   <span
                     id="email_address1_error"
@@ -103,6 +105,7 @@
                     minlength="8"
                     maxlength="20"
                     placeholder="********"
+                    autocomplete="off"
                   />
                   <span
                     id="pwd_error"
@@ -122,6 +125,7 @@
                     minlength="8"
                     maxlength="20"
                     placeholder="********"
+                    autocomplete="off"
                   />
                   <span
                     id="pwd1_error"
