--- a/client/common/resetpw.html
+++ b/client/common/resetpw.html
@@ -63,6 +63,7 @@
                     id="username"
                     name="username"
                     placeholder="example@example.com"
+                    autocomplete="username"
                   />
                   <span
                     id="username_error"
@@ -99,6 +100,7 @@
                     name="new_pwd"
                     minlength="8"
                     placeholder="********"
+                    autocomplete="off"
                   />
                   <span
                     id="new_pwd_error"
@@ -119,6 +121,7 @@
                     name="new_pwd1"
                     minlength="8"
                     placeholder="********"
+                    autocomplete="off"
                   />
                   <span
                     id="new_pwd1_error"
