--- a/client/common/account.html
+++ b/client/common/account.html
@@ -1,139 +1,165 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="../css/style.css" />
-    <meta
-      name="description"
-      content="Titan Community Bank of St. Petersburg College - Account"
-    />
-    <title>Titan Community Bank | Account</title>
-    <!--[if lt IE 9]>
-      <script src="js/html5shiv-printshiv.js"></script>
-    <![endif]-->
-  </head>
-  <body>
-    <!-- nav -->
-    <nav class="navbar navbar-expand sticky-top">
-      <div class="container">
-        <a href="../index.html" class="navbar-brand text-light">TCBank</a>
-        <div class="collapse navbar-collapse" id="navmenu">
-          <ul class="navbar-nav ms-auto">
-            <li class="nav-item">
-              <a href="spendingtrends.html" class="nav-link text-light"
-                >Spending Trends</a
-              >
-            </li>
-            <li class="nav-item">
-              <a href="prequalify.html" class="nav-link text-light"
-                >Pre-qualify</a
-              >
-            </li>
-            <li class="nav-item">
-              <a href="login.html" class="nav-link text-light">Logout</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-    <!-- main -->
-    <main class="text-dark pt-4 pb-3">
-      <div class="container">
-        <h1 class="text-center">Account</h1>
-        <!-- buttons -->
-        <section aria-label="transaction buttons">
-          <div class="text-center pt-3 pb-2">
-            <!-- deposit -->
-            <a
-              href="#"
-              id="btnDeposit"
-              class="btn btn-dark btn-sm text-light"
-              aria-label="Deposit"
-            >
-              Deposit
-            </a>
-            <!-- withdrawal -->
-            <a
-              href="#"
-              id="btnWithdrawal"
-              class="btn btn-dark btn-sm text-light"
-              aria-label="Withdrawal"
-            >
-              Withdrawal
-            </a>
-          </div>
-        </section>
-        <!-- available balance -->
-        <section aria-label="available balance">
-          <h5 class="fw-semibold text-center pt-3 pb-2">
-            Available balance: $<span id="availableBalanceArea"></span>
-          </h5>
-        </section>
-        <!-- transaction list -->
-        <section aria-label="transaction list">
-          <h5 class="text-center fw-semibold">Transactions</h5>
-          <div class="mx-2 overflow-auto">
-            <table class="table mt-2 mb-2 container transaction-table">
-              <!-- header columns -->
-              <thead>
-                <tr>
-                  <th scope="col" id="transactionDate">Date</th>
-                  <th scope="col" id="transactionDescription">Description</th>
-                  <th scope="col" id="transactionType">Type</th>
-                  <th scope="col" id="transactionAmount" class="text-end">
-                    Amount
-                  </th>
-                </tr>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
+            crossorigin="anonymous"
+        />
+        <link rel="stylesheet" href="../css/style.css" />
+        <meta
+            name="description"
+            content="Titan Community Bank of St. Petersburg College - Account"
+        />
+        <title>Titan Community Bank | Account</title>
+        <!--[if lt IE 9]>
+            <script src="js/html5shiv-printshiv.js"></script>
+        <![endif]-->
+    </head>
+    <body>
+        <!-- nav -->
+        <nav class="navbar navbar-expand sticky-top">
+            <div class="container">
+                <a href="../index.html" class="navbar-brand text-light"
+                    >TCBank</a
+                >
+                <div class="collapse navbar-collapse" id="navmenu">
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item">
+                            <a
+                                href="spendingtrends.html"
+                                class="nav-link text-light"
+                                >Spending Trends</a
+                            >
+                        </li>
+                        <li class="nav-item">
+                            <a
+                                href="prequalify.html"
+                                class="nav-link text-light"
+                                >Pre-qualify</a
+                            >
+                        </li>
+                        <li class="nav-item">
+                            <a href="login.html" class="nav-link text-light"
+                                >Logout</a
+                            >
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        <!-- main -->
+        <main class="text-dark pt-4 pb-3">
+            <div class="container">
+                <h1 class="text-center">Account</h1>
+                <!-- buttons -->
+                <section aria-label="transaction buttons">
+                    <div class="text-center pt-3 pb-2">
+                        <!-- deposit -->
+                        <a
+                            href="#"
+                            id="btnDeposit"
+                            class="btn btn-dark btn-sm text-light"
+                            aria-label="Deposit"
+                        >
+                            Deposit
+                        </a>
+                        <!-- withdrawal -->
+                        <a
+                            href="#"
+                            id="btnWithdrawal"
+                            class="btn btn-dark btn-sm text-light"
+                            aria-label="Withdrawal"
+                        >
+                            Withdrawal
+                        </a>
+                    </div>
+                </section>
                 <!-- available balance -->
-                <tr>
-                  <th scope="row" colspan="3" class=""></th>
-                  <td class="text-end bg-dark-subtle fw-semibold">
-                    $<span id="availableBalanceArea2"></span>
-                  </td>
-                </tr>
-              </thead>
-              <!-- list body -->
-              <tbody id="transactionRows"></tbody>
-            </table>
-          </div>
-        </section>
-      </div>
-    </main>
-    <!-- xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
-      crossorigin="anonymous"
-    ></script>
-    <!-- footer -->
-    <!-- footer -->
-    <footer class="text-light text-center" id="footer">
-      <div class="container footer-container">
-        Copyright &copy; 2023 Titan Community Bank. All Rights Reserved. Last
-        Modified <span id="last_modified"></span>
-        <br />
-        <a
-          class="text-light text-decoration-none d-inline"
-          href="mailto:andrewjkramerdev@gmail.com"
-          >andrewjkramerdev@gmail.com</a
-        >
-        |
-        <a
-          class="text-light text-decoration-none d-inline"
-          href="https://github.com/andrewjkramer/titan-community-bank"
-          >github.com/andrewjkramer/titan-community-bank</a
-        >
-      </div>
-    </footer>
-    <script src="../js/utilities.js" async></script>
-    <script src="../js/transactions.js" async></script>
-  </body>
+                <section aria-label="available balance">
+                    <h5 class="fw-semibold text-center pt-3 pb-2">
+                        Available balance: $<span
+                            id="availableBalanceArea"
+                        ></span>
+                    </h5>
+                </section>
+                <!-- transaction list -->
+                <section aria-label="transaction list">
+                    <h5 class="text-center fw-semibold">Transactions</h5>
+                    <div class="mx-2 overflow-auto">
+                        <table
+                            class="table mt-2 mb-2 container transaction-table"
+                        >
+                            <!-- header columns -->
+                            <thead>
+                                <tr>
+                                    <th scope="col" id="transactionDate">
+                                        Date
+                                    </th>
+                                    <th scope="col" id="transactionDescription">
+                                        Description
+                                    </th>
+                                    <th scope="col" id="transactionType">
+                                        Type
+                                    </th>
+                                    <th
+                                        scope="col"
+                                        id="transactionAmount"
+                                        class="text-end"
+                                    >
+                                        Amount
+                                    </th>
+                                </tr>
+                                <!-- available balance -->
+                                <tr>
+                                    <th scope="row" colspan="3" class=""></th>
+                                    <td
+                                        class="text-end bg-dark-subtle fw-semibold"
+                                    >
+                                        $<span
+                                            id="availableBalanceArea2"
+                                        ></span>
+                                    </td>
+                                </tr>
+                            </thead>
+                            <!-- list body -->
+                            <tbody id="transactionRows"></tbody>
+                        </table>
+                    </div>
+                </section>
+            </div>
+        </main>
+        <!-- xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx -->
+        <script
+            src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+            crossorigin="anonymous"
+        ></script>
+        <!-- footer -->
+        <!-- footer -->
+        <footer class="text-light text-center" id="footer">
+            <div class="container footer-container">
+                Copyright &copy; 2024 Titan Community Bank. All Rights Reserved.
+                Last Modified <span id="last_modified"></span>
+                <br />
+                <a
+                    class="text-light text-decoration-none d-inline"
+                    href="mailto:andrewjkramerdev@gmail.com"
+                    >andrewjkramerdev@gmail.com</a
+                >
+                |
+                <a
+                    class="text-light text-decoration-none d-inline"
+                    href="https://github.com/andrewjkramer/titan-community-bank"
+                    >github.com/andrewjkramer/titan-community-bank</a
+                >
+            </div>
+        </footer>
+        <script src="../js/utilities.js" async></script>
+        <script src="../js/transactions.js" async></script>
+    </body>
 </html>
