--- a/client/common/spendingtrends.html
+++ b/client/common/spendingtrends.html
@@ -1,84 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="../css/style.css" />
-    <meta
-      name="description"
-      content="Titan Community Bank of St. Petersburg College - Spending Trends"
-    />
-    <title>Titan Community Bank | Spending Trends</title>
-    <!--[if lt IE 9]>
-      <script src="js/html5shiv-printshiv.js"></script>
-    <![endif]-->
-  </head>
-  <body>
-    <!-- nav -->
-    <nav class="navbar navbar-expand sticky-top">
-      <div class="container">
-        <a href="../index.html" class="navbar-brand text-light">TCBank</a>
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item">
-            <a href="account.html" class="nav-link text-light">Account</a>
-          </li>
-          <li class="nav-item">
-            <a href="prequalify.html" class="nav-link text-light"
-              >Pre-qualify</a
-            >
-          </li>
-          <li class="nav-item">
-            <a href="login.html" class="nav-link text-light">Logout</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
-    <!-- main -->
-    <main class="text-dark pt-4 pb-3">
-      <div class="container">
-        <h1 class="text-center">Spending Trends</h1>
-        <!-- graph -->
-        <section aria-label="spending trends graph">
-          <div class="chartTest mt-5 mx-auto" id="graphArea">
-            <canvas id="myChart"> </canvas>
-          </div>
-        </section>
-      </div>
-    </main>
-    <!-- xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
-      crossorigin="anonymous"
-    ></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
-    <!-- Footer -->
-    <footer class="text-light text-center" id="footer">
-      <div class="container footer-container">
-        Copyright &copy; 2023 Titan Community Bank. All Rights Reserved. Last
-        Modified <span id="last_modified"></span>
-        <br />
-        <a
-          class="text-light text-decoration-none d-inline"
-          href="mailto:andrewjkramerdev@gmail.com"
-          >andrewjkramerdev@gmail.com</a
-        >
-        |
-        <a
-          class="text-light text-decoration-none d-inline"
-          href="https://github.com/andrewjkramer/titan-community-bank"
-          >github.com/andrewjkramer/titan-community-bank</a
-        >
-      </div>
-    </footer>
-    <script src="../js/utilities.js" async></script>
-    <script src="../js/spending-graph.js" async></script>
-  </body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
+            crossorigin="anonymous"
+        />
+        <link rel="stylesheet" href="../css/style.css" />
+        <meta
+            name="description"
+            content="Titan Community Bank of St. Petersburg College - Spending Trends"
+        />
+        <title>Titan Community Bank | Spending Trends</title>
+        <!--[if lt IE 9]>
+            <script src="js/html5shiv-printshiv.js"></script>
+        <![endif]-->
+    </head>
+    <body>
+        <!-- nav -->
+        <nav class="navbar navbar-expand sticky-top">
+            <div class="container">
+                <a href="../index.html" class="navbar-brand text-light"
+                    >TCBank</a
+                >
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a href="account.html" class="nav-link text-light"
+                            >Account</a
+                        >
+                    </li>
+                    <li class="nav-item">
+                        <a href="prequalify.html" class="nav-link text-light"
+                            >Pre-qualify</a
+                        >
+                    </li>
+                    <li class="nav-item">
+                        <a href="login.html" class="nav-link text-light"
+                            >Logout</a
+                        >
+                    </li>
+                </ul>
+            </div>
+        </nav>
+        <!-- main -->
+        <main class="text-dark pt-4 pb-3">
+            <div class="container">
+                <h1 class="text-center">Spending Trends</h1>
+                <!-- graph -->
+                <section aria-label="spending trends graph">
+                    <div class="chartTest mt-5 mx-auto" id="graphArea">
+                        <canvas id="myChart"> </canvas>
+                    </div>
+                </section>
+            </div>
+        </main>
+        <!-- xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx -->
+        <script
+            src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+            crossorigin="anonymous"
+        ></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
+        <!-- Footer -->
+        <footer class="text-light text-center" id="footer">
+            <div class="container footer-container">
+                Copyright &copy; 2024 Titan Community Bank. All Rights Reserved.
+                Last Modified <span id="last_modified"></span>
+                <br />
+                <a
+                    class="text-light text-decoration-none d-inline"
+                    href="mailto:andrewjkramerdev@gmail.com"
+                    >andrewjkramerdev@gmail.com</a
+                >
+                |
+                <a
+                    class="text-light text-decoration-none d-inline"
+                    href="https://github.com/andrewjkramer/titan-community-bank"
+                    >github.com/andrewjkramer/titan-community-bank</a
+                >
+            </div>
+        </footer>
+        <script src="../js/utilities.js" async></script>
+        <script src="../js/spending-graph.js" async></script>
+    </body>
 </html>
